--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,5 @@
 :host {
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 
 .header {
